White Space Fixed

--- a/style/style.css
+++ b/style/style.css
@@ -57,7 +57,7 @@
 :root header {
   padding: 20px 0;
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
-  min-width: 300px;
+  min-width: 100%;
 }
 :root header .header-content {
   display: flex;
@@ -375,13 +375,14 @@
 }
 
 .products .container .product-list {
-  margin: 20px 0;
-  display: flex;
-  flex-direction: row;
+  margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  text-align: center;
   justify-content: center;
 }
 .products .container .product-list li {
-  padding: 20px;
+  margin: 0 10px;
 }
 .products .container .product-list li a {
   font-size: 1.2rem;
@@ -562,5 +563,8 @@
     display: grid;
     grid-template-columns: repeat(1, 1fr) !important;
     gap: 20px;
+  }
+  .product-list li a {
+    font-size: 0.8rem !important;
   }
 }/*# sourceMappingURL=style.css.map */
